{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 416,
  "lineage": "2231220b-2903-23e4-c801-3a4a438a1fe7",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-tier_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:700633996777:loadbalancer/app/app-tier-internal-lb/59b886261bd64264",
            "arn_suffix": "app/app-tier-internal-lb/59b886261bd64264",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-app-tier-internal-lb-146549683.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:700633996777:loadbalancer/app/app-tier-internal-lb/59b886261bd64264",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-tier-internal-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-096544d89e4b54fb2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-023539b6fae6b3186"
              },
              {
                "subnet_id": "subnet-0cea02d0b3add6ee0"
              }
            ],
            "subnets": [
              "subnet-023539b6fae6b3186",
              "subnet-0cea02d0b3add6ee0"
            ],
            "vpc_id": "vpc-09d50185880363ffc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_security_group.external-alb_sg",
            "module.network.aws_security_group.internal-alb_sg",
            "module.network.aws_security_group.web-tier_sg",
            "module.network.aws_subnet.pri_sub_3",
            "module.network.aws_subnet.pri_sub_4",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-tier_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:700633996777:loadbalancer/app/web-tier-internal-lb/2af3d2ffef366367",
            "arn_suffix": "app/web-tier-internal-lb/2af3d2ffef366367",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-tier-internal-lb-883345988.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:700633996777:loadbalancer/app/web-tier-internal-lb/2af3d2ffef366367",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-tier-internal-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d2eb86f8cde57ea3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06da9100210d3460a"
              },
              {
                "subnet_id": "subnet-07c12bc2431b8084b"
              }
            ],
            "subnets": [
              "subnet-06da9100210d3460a",
              "subnet-07c12bc2431b8084b"
            ],
            "vpc_id": "vpc-09d50185880363ffc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_security_group.external-alb_sg",
            "module.network.aws_subnet.pub_sub_1",
            "module.network.aws_subnet.pub_sub_2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app-tier_alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:700633996777:listener/app/app-tier-internal-lb/59b886261bd64264/d88d9537ea6043e8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:700633996777:targetgroup/app-tier-tg/0ed4966e750105eb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:700633996777:listener/app/app-tier-internal-lb/59b886261bd64264/d88d9537ea6043e8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:700633996777:loadbalancer/app/app-tier-internal-lb/59b886261bd64264",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.app-tier_lb",
            "module.alb.aws_lb_target_group.app-tier_tg",
            "module.network.aws_security_group.external-alb_sg",
            "module.network.aws_security_group.internal-alb_sg",
            "module.network.aws_security_group.web-tier_sg",
            "module.network.aws_subnet.pri_sub_3",
            "module.network.aws_subnet.pri_sub_4",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-tier_alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:700633996777:listener/app/web-tier-internal-lb/2af3d2ffef366367/74d113f4fb963e0e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:700633996777:targetgroup/web-tier-tg/8bbd207daf6a992f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:700633996777:listener/app/web-tier-internal-lb/2af3d2ffef366367/74d113f4fb963e0e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:700633996777:loadbalancer/app/web-tier-internal-lb/2af3d2ffef366367",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.web-tier_lb",
            "module.alb.aws_lb_target_group.web-tier_tg",
            "module.network.aws_security_group.external-alb_sg",
            "module.network.aws_subnet.pub_sub_1",
            "module.network.aws_subnet.pub_sub_2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app-tier_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:700633996777:targetgroup/app-tier-tg/0ed4966e750105eb",
            "arn_suffix": "targetgroup/app-tier-tg/0ed4966e750105eb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:700633996777:targetgroup/app-tier-tg/0ed4966e750105eb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-tier-tg",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d50185880363ffc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web-tier_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:700633996777:targetgroup/web-tier-tg/8bbd207daf6a992f",
            "arn_suffix": "targetgroup/web-tier-tg/8bbd207daf6a992f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:700633996777:targetgroup/web-tier-tg/8bbd207daf6a992f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-tier-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d50185880363ffc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-tier_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:700633996777:instance/i-0432fbb9ea5482f6c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0432fbb9ea5482f6c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-instance-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-055143d6d0d47fb28",
            "private_dns": "ip-10-0-20-187.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-003572445052b4647",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-023539b6fae6b3186",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ed92bcedeab92f51"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_security_group.app-tier_sg",
            "module.network.aws_security_group.external-alb_sg",
            "module.network.aws_security_group.internal-alb_sg",
            "module.network.aws_security_group.web-tier_sg",
            "module.network.aws_subnet.pri_sub_3",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-tier_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-069016378eeb5c507",
            "arn": "arn:aws:ec2:us-east-1:700633996777:instance/i-0762817b72caea2a6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0762817b72caea2a6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-instance-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fa8c0fa1f0064434",
            "private_dns": "ip-10-0-0-54.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.54",
            "public_dns": "ec2-13-219-225-243.compute-1.amazonaws.com",
            "public_ip": "13.219.225.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-040d237bcd38a08db",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c12bc2431b8084b",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e88b8f057845daf1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2-instance.aws_ami_from_instance.app-tier-with-dependencies_ami",
            "module.ec2-instance.aws_instance.app-tier_instance",
            "module.network.aws_security_group.app-tier_sg",
            "module.network.aws_security_group.external-alb_sg",
            "module.network.aws_security_group.internal-alb_sg",
            "module.network.aws_security_group.web-tier_sg",
            "module.network.aws_subnet.pri_sub_3",
            "module.network.aws_subnet.pub_sub_1",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bdcee5223cd99093",
            "arn": "arn:aws:ec2:us-east-1:700633996777:elastic-ip/eipalloc-0bdcee5223cd99093",
            "domain": "vpc",
            "id": "eipalloc-0bdcee5223cd99093",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-210-102-79.compute-1.amazonaws.com",
            "public_ip": "18.210.102.79",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-nat-a"
            },
            "tags_all": {
              "Name": "eip-nat-a"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05252c3f61e7778ca",
            "arn": "arn:aws:ec2:us-east-1:700633996777:elastic-ip/eipalloc-05252c3f61e7778ca",
            "domain": "vpc",
            "id": "eipalloc-05252c3f61e7778ca",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-219-181-61.compute-1.amazonaws.com",
            "public_ip": "44.219.181.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-nat-b"
            },
            "tags_all": {
              "Name": "eip-nat-b"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700633996777:internet-gateway/igw-0bedb1993fcf9426a",
            "id": "igw-0bedb1993fcf9426a",
            "owner_id": "700633996777",
            "tags": {
              "Name": "-igw"
            },
            "tags_all": {
              "Name": "-igw"
            },
            "vpc_id": "vpc-09d50185880363ffc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bdcee5223cd99093",
            "association_id": "eipassoc-00e040e1b083aea57",
            "connectivity_type": "public",
            "id": "nat-03819473abaa0bb16",
            "network_interface_id": "eni-0af50b70dfd575800",
            "private_ip": "10.0.0.74",
            "public_ip": "18.210.102.79",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07c12bc2431b8084b",
            "tags": {
              "Name": "nat-a"
            },
            "tags_all": {
              "Name": "nat-a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip-nat-a",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_subnet.pub_sub_1",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05252c3f61e7778ca",
            "association_id": "eipassoc-0c041463d7b6e72b8",
            "connectivity_type": "public",
            "id": "nat-09fc1c28d2519e637",
            "network_interface_id": "eni-0ca92a91e503f8d7d",
            "private_ip": "10.0.10.61",
            "public_ip": "44.219.181.61",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06da9100210d3460a",
            "tags": {
              "Name": "nat-b"
            },
            "tags_all": {
              "Name": "nat-b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip-nat-b",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_subnet.pub_sub_2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700633996777:route-table/rtb-0771e8ee106498878",
            "id": "rtb-0771e8ee106498878",
            "owner_id": "700633996777",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03819473abaa0bb16",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pri-rt-a"
            },
            "tags_all": {
              "Name": "pri-rt-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d50185880363ffc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip-nat-a",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat-a",
            "module.network.aws_subnet.pub_sub_1",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700633996777:route-table/rtb-092d471cb138e70aa",
            "id": "rtb-092d471cb138e70aa",
            "owner_id": "700633996777",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09fc1c28d2519e637",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pri-rt-b"
            },
            "tags_all": {
              "Name": "pri-rt-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d50185880363ffc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip-nat-b",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat-b",
            "module.network.aws_subnet.pub_sub_2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700633996777:route-table/rtb-0bda45fecdd67ffca",
            "id": "rtb-0bda45fecdd67ffca",
            "owner_id": "700633996777",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bedb1993fcf9426a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d50185880363ffc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub-3-with-Pri-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbbf3d206255f9aa",
            "route_table_id": "rtb-0771e8ee106498878",
            "subnet_id": "subnet-023539b6fae6b3186"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip-nat-a",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat-a",
            "module.network.aws_route_table.pri-rt-a",
            "module.network.aws_subnet.pri_sub_3",
            "module.network.aws_subnet.pub_sub_1",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub-4-with-Pri-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a052ca8e04ea1e9c",
            "route_table_id": "rtb-0771e8ee106498878",
            "subnet_id": "subnet-0cea02d0b3add6ee0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip-nat-a",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat-a",
            "module.network.aws_route_table.pri-rt-a",
            "module.network.aws_subnet.pri_sub_4",
            "module.network.aws_subnet.pub_sub_1",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub-5-with-Pri-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d1ecb0582dbb92d",
            "route_table_id": "rtb-092d471cb138e70aa",
            "subnet_id": "subnet-03c273019276b8e99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip-nat-b",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat-b",
            "module.network.aws_route_table.pri-rt-b",
            "module.network.aws_subnet.pri_sub_5",
            "module.network.aws_subnet.pub_sub_2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub-6-with-Pri-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ef3484486361f54",
            "route_table_id": "rtb-092d471cb138e70aa",
            "subnet_id": "subnet-03361dec6fa9fef14"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip-nat-b",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat-b",
            "module.network.aws_route_table.pri-rt-b",
            "module.network.aws_subnet.pri_sub_6",
            "module.network.aws_subnet.pub_sub_2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub-1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4ea176228c3ae47",
            "route_table_id": "rtb-0bda45fecdd67ffca",
            "subnet_id": "subnet-07c12bc2431b8084b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.pub_sub_1",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub-2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a21e36a66101bc8",
            "route_table_id": "rtb-0bda45fecdd67ffca",
            "subnet_id": "subnet-06da9100210d3460a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.pub_sub_2",
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-tier_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700633996777:security-group/sg-0ed92bcedeab92f51",
            "description": "Enable http/https on port 4000/22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed92bcedeab92f51",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "http access",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-096544d89e4b54fb2"
                ],
                "self": false,
                "to_port": 4000
              }
            ],
            "name": "app-tier_sg",
            "name_prefix": "",
            "owner_id": "700633996777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-tier_sg"
            },
            "tags_all": {
              "Name": "app-tier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d50185880363ffc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_security_group.external-alb_sg",
            "module.network.aws_security_group.internal-alb_sg",
            "module.network.aws_security_group.web-tier_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700633996777:security-group/sg-0c410f8ee257fc296",
            "description": "Enable postgresql access on port 4510 frm app-tier_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c410f8ee257fc296",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "postgresql access",
                "from_port": 4510,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ed92bcedeab92f51"
                ],
                "self": false,
                "to_port": 4510
              }
            ],
            "name": "db_sg",
            "name_prefix": "",
            "owner_id": "700633996777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db_sg"
            },
            "tags_all": {
              "Name": "db_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d50185880363ffc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_security_group.app-tier_sg",
            "module.network.aws_security_group.external-alb_sg",
            "module.network.aws_security_group.internal-alb_sg",
            "module.network.aws_security_group.web-tier_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "external-alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700633996777:security-group/sg-0d2eb86f8cde57ea3",
            "description": "Enable http/https on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outside",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2eb86f8cde57ea3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "external-alb_sg",
            "name_prefix": "",
            "owner_id": "700633996777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "external-alb_sg"
            },
            "tags_all": {
              "Name": "external-alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d50185880363ffc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal-alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700633996777:security-group/sg-096544d89e4b54fb2",
            "description": "Enable http/https on port 80/443/22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outside",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096544d89e4b54fb2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e88b8f057845daf1"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e88b8f057845daf1"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "internal-alb_sg",
            "name_prefix": "",
            "owner_id": "700633996777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "internal-alb_sg"
            },
            "tags_all": {
              "Name": "internal-alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d50185880363ffc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_security_group.external-alb_sg",
            "module.network.aws_security_group.web-tier_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-tier_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700633996777:security-group/sg-0e88b8f057845daf1",
            "description": "allow external ALB sg to access at port 80 http/https",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e88b8f057845daf1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d2eb86f8cde57ea3"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-tier_sg",
            "name_prefix": "",
            "owner_id": "700633996777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-tier_sg"
            },
            "tags_all": {
              "Name": "web-tier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d50185880363ffc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_security_group.external-alb_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700633996777:subnet/subnet-023539b6fae6b3186",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023539b6fae6b3186",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700633996777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-3"
            },
            "tags_all": {
              "Name": "pri-sub-3"
            },
            "vpc_id": "vpc-09d50185880363ffc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700633996777:subnet/subnet-0cea02d0b3add6ee0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cea02d0b3add6ee0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700633996777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-4"
            },
            "tags_all": {
              "Name": "pri-sub-4"
            },
            "vpc_id": "vpc-09d50185880363ffc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700633996777:subnet/subnet-03c273019276b8e99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c273019276b8e99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700633996777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-5"
            },
            "tags_all": {
              "Name": "pri-sub-5"
            },
            "vpc_id": "vpc-09d50185880363ffc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700633996777:subnet/subnet-03361dec6fa9fef14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03361dec6fa9fef14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700633996777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-6"
            },
            "tags_all": {
              "Name": "pri-sub-6"
            },
            "vpc_id": "vpc-09d50185880363ffc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700633996777:subnet/subnet-07c12bc2431b8084b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c12bc2431b8084b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700633996777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub_1"
            },
            "tags_all": {
              "Name": "pub_sub_1"
            },
            "vpc_id": "vpc-09d50185880363ffc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700633996777:subnet/subnet-06da9100210d3460a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06da9100210d3460a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700633996777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub_2"
            },
            "tags_all": {
              "Name": "pub_sub_2"
            },
            "vpc_id": "vpc-09d50185880363ffc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.network.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700633996777:vpc/vpc-09d50185880363ffc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0edd171b463430606",
            "default_route_table_id": "rtb-0e05b0dd9c0fa8b05",
            "default_security_group_id": "sg-08c7d33a21bfaee8f",
            "dhcp_options_id": "dopt-02c6c5d693016453b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09d50185880363ffc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e05b0dd9c0fa8b05",
            "owner_id": "700633996777",
            "tags": {
              "Name": "-vpc"
            },
            "tags_all": {
              "Name": "-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}